; ModuleID = '/home/carl/AnghaBench/mongoose/test/ccgi-1.2/extr_prefork.c_set_handler.c'
source_filename = "/home/carl/AnghaBench/mongoose/test/ccgi-1.2/extr_prefork.c_set_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sigaction = type { void (i32)*, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, void (i32)*)* @set_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_handler(i32 %0, void (i32)* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca void (i32)*, align 8
  %5 = alloca %struct.sigaction, align 8
  store i32 %0, i32* %3, align 4
  store void (i32)* %1, void (i32)** %4, align 8
  %6 = load void (i32)*, void (i32)** %4, align 8
  %7 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %5, i32 0, i32 0
  store void (i32)* %6, void (i32)** %7, align 8
  %8 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %5, i32 0, i32 2
  store i64 0, i64* %8, align 8
  %9 = getelementptr inbounds %struct.sigaction, %struct.sigaction* %5, i32 0, i32 1
  %10 = call i32 @sigemptyset(i32* %9)
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @sigaction(i32 %11, %struct.sigaction* %5, i32 0)
  ret i32 %12
}

declare dso_local i32 @sigemptyset(i32*) #1

declare dso_local i32 @sigaction(i32, %struct.sigaction*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
